Adding controller tests and comments